gitops/apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools-container
          image: corentinth/it-tools:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
