gitops/apps/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ittools.bytedragon.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools-service
                port:
                  number: 80
